# ai-schools-workshop-blazing_bears-2

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
data/: districts_sample.csv
docs/superpowers/plans/: 2026-04-07-school-district-evaluator.md
src/: App.css  App.jsx  api.js
src/__tests__/: App.test.jsx  DistrictDetail.test.jsx  DistrictList.test.jsx  StateSelector.test.jsx  api.test.js
src/ai_schools/: __main__.py  app.py  data.py  models.py  scoring.py  service.py  web_api.py
src/ai_schools/templates/: index.html
src/components/: DistrictDetail.css  DistrictDetail.jsx  DistrictList.css  DistrictList.jsx  StateSelector.css  StateSelector.jsx
tests/: test_api.py  test_data_and_service.py  test_misc.py  test_scoring.py
