[project]
name = "ai-schools"
version = "0.1.0"
description = "Compare and score US school districts using public data."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [{ name = "Blazing Bears" }]

dependencies = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
ai-schools = "ai_schools.__main__:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_schools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-q",
  "--cov=ai_schools",
  "--cov-report=term-missing",
  "--cov-fail-under=100",
]

[tool.coverage.run]
branch = true
source = ["ai_schools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
